; ModuleID = '/home/carl/AnghaBench/kphp-kdb/statsx/extr_statsx-data.c_get_counter_views.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/statsx/extr_statsx-data.c_get_counter_views.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.counter = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_counter_views(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca %struct.counter*, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = call %struct.counter* @get_counter_old(i64 %5, i32 0, i32 1)
  store %struct.counter* %6, %struct.counter** %4, align 8
  %7 = load %struct.counter*, %struct.counter** %4, align 8
  %8 = icmp ne %struct.counter* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %20

10:                                               ; preds = %1
  %11 = load %struct.counter*, %struct.counter** %4, align 8
  %12 = getelementptr inbounds %struct.counter, %struct.counter* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp eq i32 %13, -2
  br i1 %14, label %15, label %16

15:                                               ; preds = %10
  store i32 -2, i32* %2, align 4
  br label %20

16:                                               ; preds = %10
  %17 = load %struct.counter*, %struct.counter** %4, align 8
  %18 = getelementptr inbounds %struct.counter, %struct.counter* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  store i32 %19, i32* %2, align 4
  br label %20

20:                                               ; preds = %16, %15, %9
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local %struct.counter* @get_counter_old(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
